# lmdb

./: CMakeLists.txt  README.md  readme.md
packaging/: lmdb.pc.in
src/: CMakeLists.txt
tests/: CMakeLists.txt
